--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       #profilePic {
         width: 150px;
       }
+      nav {
+        background: #ABC;
+      }
     </style>
   </head>
   <body>
@@ -35,16 +38,17 @@
 
     <div class='row'>
       <div class='col'>
-        
-        <ul>
-          <li><a href='a'>Home</a></li>
-          <li><a href='a'>About Me</a></li>
-          <li><a href='a'>Projects</a></li>
+        <nav>
+          <ul>
+            <li><a href='a'>Home</a></li>
+            <li><a href='a'>About Me</a></li>
+            <li><a href='a'>Projects</a></li>
 
-        </u>
+          </u>
 
+          </div>
         </div>
-      </div>
+      </nav>
 
     <div class='row'>
       <div class='col-sm-4'>
