Changed the nav bar words black

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       li a {
         display: block;
         text-decoration: none;
-        color: #FAD;
+        color: #000000;
       }
       li a:hover {
         color: #ABC;
-        background: #FAD;
+        background: #000000;
       }
       #profilePic {
         width: 150px;
